2009-12-10  Conny Marco Menebrocker  <c-m-m@gmx.de>

	* configure.host: Add xc16x support.
	* libc/include/machine/ieeefp.h: Ditto.
	* libc/include/sys/config.h: Ditto.
	* libc/machine/configure.in: Ditto.
	* libc/machine/Makefile.in: Regenerated.
	* libc/machine/aclocal.m4: Ditto.
	* libc/machine/configure: Ditto.
	* libc/machine/xc16x/Makefile.am: New file.
	* libc/machine/xc16x/Makefile.in: Ditto.
	* libc/machine/xc16x/aclocal.m4: Ditto.
	* libc/machine/xc16x/configure: Ditto.
	* libc/machine/xc16x/configure.in: Ditto.
	* libc/machine/xc16x/putchar.c: Ditto.
	* libc/machine/xc16x/puts.c: Ditto.
	* libc/machine/xc16x/setjmp.S: Ditto.

2009-12-08  Eric Blake  <ebb9@byu.net>

	Fix some *at declarations.
	* libc/include/stdio.h (symlinkat): Move this...
	* libc/include/sys/_default_fcntl.h (unlinkat): ...and this...
	* libc/include/sys/unistd.h (symlinkat, unlinkat): ...here, to
	match POSIX.

2009-12-03  Craig Howland <howland@LGSInnovations.com>

	* libc/stdlib/strtod.c:  Correct "NO_REENT" to "_REENT_ONLY".
	* libc/stdlib/wcstod.c:  Ditto.
	* libc/stdlib/dtoastub.c:  Ditto.

2009-11-23  Corinna Vinschen  <corinna@vinschen.de>

	Use NetBSD fix for CVE-2009-0689 security vulnerability.
	* libc/include/sys/reent.h (_Kmax): Define here based on the sizeof
	size_t, as in latest NetBSD.
	* libc/reent/reent.c (_reclaim_reent): Use _Kmax rather than constant
	value 15.
	* libc/stdlib/mprec.c (_Kmax): Don't define here.  Explain why.

2009-11-20  Nick Clifton  <nickc@redhat.com>

	* libc/machine/rx/strncat.S (_strncat): Replace use of r6
	(call-saved) with r14 (call-used).

2009-11-18  Dave Korn  <dave.korn.cygwin@googlemail.com>

	* libm/machine/i386/f_tan.S (_f_tan): Free fp stack register
	containing useless constant before advancing fp sp over it.
	(_f_tanf): Likewise.

2009-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/vfprintf.c: Include ../stdlib/local.h.  Replace call to
	_mbtowc_r with direct call to __mbtowc.
	* libc/stdio/vfscanf.c: Ditto.